Add errorCode into error schema
